 - UI: Add exception string to the "network error" dialog, to better tell what
   the problem is.
 - UI: Add back -p option to apport-collect/apport-update-bug (regression from
   1.13). (LP: #538944)
 - launchpad.py: Add yet another workaround for LP#336866. (LP: #516381)
 - launchpad.py, download(): Ignore attachments with invalid key names.

Improvements:
 - unkillable_shutdown: Add list of running processes and blacklisted pids to
   report. (LP: #537262)

1.13 (2010-03-10)
-----------------
New features:
 - Add "unkillable_shutdown" script to collect information about processes
   which are still running after sending SIGTERM to them. This can be hooked
   into e. g. /etc/init.d/sendsigs on Debian/Ubuntu systems.

Improvements:
 - apport_python_hook.py: Directly check /etc/default/apport instead of
   querying packaging.enabled(), to avoid importing lots of modules for
   non-packaged scripts. Thanks Stuart Colville! (LP: #528355)

Bug fixes:
 - Fix SegV parser to notice walking off the stack during "call" or "ret"
   (LP: #531672).
 - Fix --help output for bug updating mode (invocation as apport-collect or
   apport-update-bug). (LP: #504116)
 - Fix bug escalation tagging, thanks to Brian Murray.
 - Fix option processing when being invoked as apport-bug. Thanks to Daniel
   Hahler for the patch! (LP: #532944)

1.12.1 (2010-02-22)
-------------------
Bug fixes:
 - launchpad.py: Do not keep escalating bugs, just escalate at the 10th
   duplicate.
 - Improve error message if a symptom script did not determine a package name.
   (LP: #503834)
 - general-hooks/generic.py: Fix crash on libGL check with empty StacktraceTop.
 - Review and clean up usage of chmod(). This fixes a small race condition in the
   Python exception hook where a local attacker could read the information from
   another user's crash report. (LP: #516029)
 - hookutils, package_versions(): Ignore "None" packages, for more robust
   package hooks. (LP: #518295)

1.12 (2010-01-20)